# AI-Products-Review

./: .env.example  .env.production  .env.vercel  .gitignore  ABACUS_AI_INTEGRATION_PLAN.md  AI_CONTENT_GENERATION_RESULTS.md  AI_CONTENT_SAMPLES_REPORT.md  AI_GENERATION_INTEGRATION_PLAN_REVISED.md  ANALYTICS_IMPLEMENTATION.md  API-CONFIG.md  API-DOCUMENTATION.md  AUTONOMOUS_WORK_PROGRESS.md  COMPLETE_ARCHITECTURE.md  DATABASE_DEPLOYMENT.md  DATABASE_DEPLOYMENT_REPORT.md  DATABASE_INTEGRATION_TEST_RESULTS.md  DESIGN.md  DYNAMIC_NIGHT_WORK.md  FACEBOOK_STRATEGY.md  GOOGLE-DRIVE-OAUTH-SETUP.md  GOOGLE-DRIVE-OAUTH-SUMMARY.md  INTEGRATION_PLAN.md  LOCAL_VERCEL_SYNC.md  MORNING_REPORT.md  MORNING_REPORT_FINAL.md  NIGHTLY_PROGRESS.md  NIGHTLY_TODOS.md  NIGHTLY_TODOS_DESIGN.md  NIGHTLY_WORK_PLAN.md  NIGHT_WORK_IN_PROGRESS_ENHANCEMENT.md  NIGHT_WORK_SYSTEM.md  NOTIFICATIONS_SYSTEM_DESIGN.md  OPENCODE_ABACUS_RESEARCH.md  PHASE2-IMPLEMENTATION.md  PHASE2-REQUIREMENTS.md  PRE_MORNING_REPORT.md  PRIVACY_POLICY_UPDATE.md  PRODUCT_ISSUES_ANALYSIS.md  QUICKSTART.md  README.md  (+63 more)
api/: analytics.js  generate.js  product.js  products.js  reviews.js  search.js  track.js
database/: analytics_schema.sql  migrations.sql  schema.sql  turso_schema_deploy.py
scripts/: abacus_image_gen.py  abacus_image_gen_v2.py  create_night_work_board.py  create_productlens_board.py  cron_product_scraper.py  cron_scrape.sh  db_integration.py  db_integration_simple.py  execute_night_work.py  generate_content.py  google_drive.py  google_drive_oauth.py  install_autonomous_worker.sh  install_cronjobs.sh  (+13 more)
(+11 files in other folders)
